[package]
name = "harmony"
version = "0.1.0"
edition = "2021"

[features]
default = []

# Services
services = [
    "service-binance",
    "service-crypto"
]

service-binance = [
    "dep:plot",
    "dep:binance"
]

service-crypto = [
    "dep:ethers",
    "dep:bigdecimal",
    "dep:lazy_static"
]

full = [
    "services"
]

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", features = ["std"], default-features = false }

tokio = { version = "1.37", features = ["rt-multi-thread", "net"], default-features = false }
axum = { version = "0.7", features = ["tokio", "http1", "json", "query"], default-features = false }
axum-server = { version = "0.6", features = ["tls-rustls"], default-features = false }

tracing = { version = "0.1", features = ["attributes"], default-features = false }
tracing-subscriber = { version = "0.3", features = ["fmt"], default-features = false }

# service crypto features
ethers = { version = "2.0", features = ["ws", "rustls"], default-features = false, optional = true }
bigdecimal = { version = "0.4", default-features = false, optional = true }
lazy_static = { version = "1.5", default-features = false, optional = true }

# service binance features
plot = { git = "https://github.com/uoaths/plot.git", branch = "main", default-features = false, optional = true }
binance = { git = "https://github.com/uoaths/binance.git", branch = "main", default-features = false, optional = true }